Adicionamos cor e imagens a nossa obra de arte

--- a/index.html
+++ b/index.html
@@ -4,24 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The PUCCA</title>
-</head>
+    <link rel="stylesheet" href="style.css">
 
+</head>
+<body>
+
+    <header>
+        <div class="logo-topo">
+            <img src="logo.png" alt="Logo Do Site">
+        </div>
+       
 <div class="menu">
     <button onclick="location.href='home.html'">Home</button>
-    <button onclick="location.href='about.html'">About</button>
-    <button onclick="location.href='services.html'">Services</button>
-    <button onclick="location.href='contact.html'">Contact</button>
+    <button onclick="location.href='about.html'">Jogos</button>
+    <button onclick="location.href='services.html'">Assistir</button>
+    <button onclick="location.href='contact.html'">Histórias</button>
+    <button onclick="location.href='contact.html'">Quiz</button>
 </div>
-
+</header>
 <img src="imagem/Pucca imagem 1.jpg" alt="A imagem consiste em uma arvore, onde o garu se encontra e a pucca entá na grama olhando o"><br>
 
 <h1> Olá! Pronto para explorar o emocionante mundo da Pucca?</h1><br>
 
+<div class="character">
+<img src="imagem/pucca.png" alt="Pucca" width="100" height="100">
+    <div>
+    <h2>Pucca</h2>
+    <p>Uma menina de 10 anos, cheia de energia e força. Ela vive na Vila de Sooga e é apaixonada por Garu. Pucca está sempre tentando conquistar Garu com suas habilidades de artes marciais e seu amor incondicional.</p>
+    </div>
+</div>
 
+<div class="character">
+<img src="imagem/garu.png" alt="Garu" width="100" height="100">
+<div>
+    <h2>Garu</h2>
+    <p>Um ninja de 12 anos que fez um voto de silêncio para honrar a memória de seu pai e se tornar o melhor ninja de todos. Ele tenta evitar os avanços de Pucca, mas frequentemente se vê envolvido em suas aventuras.</p>
+    </div>
+</div>
 
+<div class="character">
+<img src="imagem/abyo.png" alt="Abyo" width="100" height="100">
+<div>
+    <h2>Abyo</h2>
+    <p>Amigo de Garu, Abyo é um jovem que adora artes marciais e está sempre procurando uma oportunidade para mostrar suas habilidades. Ele é conhecido por rasgar sua camisa dramaticamente.</p>
+</div>
+</div>
 
+<div class="character">
+<img src="imagem/ching.png" alt="Ching" width="100" height="100">
+<div>
+    <h2>Ching</h2>
+    <p>Melhor amiga de Pucca, Ching é uma garota doce e gentil que também pratica artes marciais. Ela tem um galo de estimação chamado Won.</p>
+</div>
+</div>
 
-<body>
+<div class="character">
+<img src="imagem/tobe.png" alt="Tobe" width="100" height="100">
+<div>
+    <h2>Tobe</h2>
+    <p>O principal antagonista da série, Tobe é um ninja que tem uma rivalidade com Garu. Ele está sempre tentando derrotar Garu, mas seus planos geralmente falham.</p>
+</div>
+</div>
+
+<div class="character">
+<img src="imagem/Ring-ringa.png" alt="Ring-Ring" width="100" height="100">
+<div>
+    <h2>Ring-Ring</h2>
+    <p>Uma garota que é rival de Pucca no amor por Garu. Ela é vaidosa e usa suas habilidades mágicas para tentar conquistar Garu e atrapalhar Pucca.</p>
+</div>
+</div>
+
+<div class="character">
+<img src="imagem/tios.png" alt="Tios de Pucca" width="100" height="100">
+<div>
+    <h2>Tios de Pucca</h2>
+    <p>Linguini, Ho e Dumpling são os tios de Pucca que administram o restaurante Goh Rong. Eles são mestres na culinária e frequentemente ajudam Pucca em suas aventuras.</p>
+</div>
+</div>
+
+<div class="character">
+<img src="imagem/mio.png" alt="Mio" width="100" height="100">
+<div>
+    <h2>Mio</h2>
+    <p>O gato de estimação de Garu, que frequentemente acompanha seu dono em suas aventuras e lutas contra Tobe.</p>
     
 </body>
 </html>
